# app/dto/socialmedia.go
@@ -1,6 +1,9 @@
 package dto
 
-import "adamnasrudin03/my-gram/app/entity"
+import (
+	"adamnasrudin03/my-gram/app/entity"
+	"time"
+)
 
 type SocialMediaCreateReq struct {
 	Name           string `json:"name" validate:"required"`
@@ -15,4 +18,13 @@ type SocialMediaListRes struct {
 type SocialMediaUpdateReq struct {
 	Name           string `json:"name" validate:"required"`
 	SocialMediaUrl string `json:"social_media_url" validate:"required"`
+}
+
+type SocialMediaCreateUpdateResponse struct {
+	ID             uint64    `json:"id"`
+	Name           string    `json:"name" `
+	SocialMediaUrl string    `json:"social_media_url" `
+	UserID         uint64    `json:"user_id"`
+	CreatedAt      time.Time `json:"created_at,omitempty"`
+	UpdatedAt      time.Time `json:"updated_at,omitempty"`
 }
